--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -49,6 +49,10 @@
   justify-content: space-evenly;
 }
 
+.header__nav > a {
+  text-decoration: none !important;
+}
+
 .header__option {
   display: flex;
   flex-direction: column;
