--- a/src/assets/css/Payment.css
+++ b/src/assets/css/Payment.css
@@ -31,3 +31,22 @@
 .payment__details {
   flex: 0.8;
 }
+
+.payment__details > form {
+  max-width: 400px;
+}
+
+.payment__priceContainer {
+  padding: 10px 0;
+}
+
+.payment__details > form > button {
+  background-color: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734 #9c7e31 #846a29;
+  padding: 2px 5px;
+  color: #111;
+  width: 100%;
+  border-radius: 2px;
+}
