--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -10,6 +10,13 @@
   width: 100%;
   max-height: 400px;
   min-width: 100px;
+  transition: all 0.2s;
+}
+
+.product:hover {
+  transform: scale(1.02);
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
 }
 
 .product > img {
